adding jenkins to build