@@ -1,11 +1,11 @@
 export JAVA_HOME=`echo $JRE_HOME`
-export JAVA_OPTS="-Dfile.encoding=UTF-8 \
-  -Dcatalina.logbase=/var/log/tomcat7 \
-  -Dnet.sf.ehcache.skipUpdateCheck=true \
-  -XX:+DoEscapeAnalysis \
-  -XX:+UseConcMarkSweepGC \
-  -XX:+CMSClassUnloadingEnabled \
-  -XX:+UseParNewGC \
-  -XX:MaxPermSize=2048m -Xms32768m -Xmx32768m"
+### START :: SALT :: set_java_opts Generated Automatically DO NOT EDIT!!###
+
+
+### END :: SALT :: set_java_opts Generated Automatically DO NOT EDIT!!###
+### START :: SALT :: configure_build_env Generated Automatically DO NOT EDIT!!###
+
+
+### END :: SALT :: configure_build_env Generated Automatically DO NOT EDIT!!###
 export PATH=$JAVA_HOME/bin:$PATH
 TOMCAT_HOME=`echo $TOMCAT_HOME`
